# hn-pulse

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: hn-research.md  run-evals.md
.github/workflows/: ci.yml
agent/: agent.py
docs/: spec.md  systems-design.html
src/hn_extras/: __init__.py  fetch.py  server.py
src/hn_pulse/: client.py  hn_types.py  server.py
src/hn_pulse/tools/: __init__.py  common.py  item.py  search.py  specials.py  stories.py  users.py
temporal/: activities.py  run_workflow.py  worker.py  workflows.py
tests/: conftest.py
tests/evals/: test_tool_selection.py
tests/integration/: test_server.py
tests/unit/: test_error_scenarios.py  test_fetch.py  test_item.py  test_search.py  test_specials.py  test_stories.py  test_temporal_activities.py  test_temporal_workflows.py  test_users.py
