[project]
name = "hn_pulse"
version = "1.0.0"
description = "Hacker News MCP Server — read HN stories, search discussions, look up users, and find jobs via the Model Context Protocol."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>=1.17.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.85.0,<1.0.0",
    "langchain-anthropic>=1.0.0,<2.0.0",
    "langchain-mcp-adapters>=0.2.2,<1.0.0",
    "langgraph>=1.1.3,<2.0.0",
    "mcp>=1.9.2,<2.0.0",
    "rich>=13.0",
]
temporal = [
    "temporalio>=1.7.0,<2.0.0",
]
dev = [
    "arcade-mcp[all]>=1.12.1,<2.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

# Tell Arcade.dev that this package has Arcade tools
[project.entry-points.arcade_toolkits]
toolkit_name = "hn_pulse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hn_pulse", "src/hn_extras", "temporal"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that start the real MCP server (no external API calls)",
    "eval: tests that call the Anthropic API (require ANTHROPIC_API_KEY)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
warn_return_any = true
